tests/codegen/fail/enum/derive_no_values.rs
use coasys_juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum Test {}

fn main() {}
